braavos/iron-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mariadb
  template:
    metadata:
      labels:
        db: mariadb
    spec:
      containers:
        - name: iron-db
          image: kodekloud/irondb:2.0
      volumes:
        - name: db
          emptyDir: {}
