braavos/iron-db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
spec:
  selector:
    db: mariadb
  ports:
  - targetPort: 3306
    port: 3306
    protocol: TCP
  type: ClusterIP
