braavos/iron-gallery-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  selector:
    name: iron-gallery
  ports:
  - targetPort: 80
    port: 80 
    protocol: TCP
  type: ClusterIP
